Fixed the spacing issue on the cards for restaurants. As well as got both API's searching by City Name.

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -111,6 +111,7 @@ h3 {
     line-height: 1.3;
     font-size: 11px;
     margin-bottom: 1em;
+    z-index: 5;
   }
   
   .label {
